<resources>
    <string name="2">Navigate up</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130003">Done</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130006">OFF</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130007">ON</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130008">Alt+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130009">Ctrl+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13000a">delete</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13000b">enter</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13000c">Function+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13000d">Meta+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13000e">Shift+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13000f">space</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130010">Sym+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130011">Menu+</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130012">Search…</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130013">Clear query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130015">Search</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130016">Submit query</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130017">Voice search</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13001a">Collapse</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13001b">Account</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13001c">Activate</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13001d">For the app to operate correctly, please allow TiviMate to set alarms and reminders</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13001e">For the app to operate correctly, please allow TiviMate to access all files</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13001f">androidx.startup</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130020">TiviMate</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130021">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130022">Apply</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130023">Apply changes</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130024">Apply changes?</string>
    <string name="auto">Auto</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130026">Back</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130027">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130028">Collapse the bottom sheet</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130029">Expand the bottom sheet</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13002a">Expand halfway</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13002b">Drag handle double-tapped</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13002c">Drag handle</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13002d">Answer</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13002e">Video</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13002f">Decline</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130030">Hang Up</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130031">Incoming call</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130032">Ongoing call</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130033">Screening an incoming call</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130034">Cancel</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130035">Characters entered %1$d of %2$d</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130036">Character limit exceeded %1$d of %2$d</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130037">%1$d/%2$d</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130038">Clear</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130039">Clear text</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13003a">Close</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13003b">982c6f2f349342c8bc4ed150a3532d3c</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13003c">Re-enter password</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13003d">Create account</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13003e">Email</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13003f">Email is already taken, please reset your password instead</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130040">Log in with Facebook</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130041">Facebook login failed</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130042"><u>Forgot password</u></string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130043">Email is invalid, please correct it and try again</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130044">"User logged in, starting: "</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130045">User not logged in, starting ParseLoginActivity</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130046">Email</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130047">Please check your email for instructions on how to access your account</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130048">Enter your email to recover your password</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130049">Back to Login</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13004a">Submit</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13004b">Failed to request password reset, please try again</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13004c">Layout missing Facebook login button, disabled Facebook login</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13004d">Layout missing Twitter login button, disabled Twitter login</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13004e">Disabled username/password login and signup because of missing layout elements</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13004f">"Facebook login failed, exception: "</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130050">"Updating user object after Facebook login failed, exception: "</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130051">Layout missing login button</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130052">Layout missing login help button</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130053">Layout missing password field</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130054">Layout missing signup button</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130055">Layout missing username field</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130056">"Parse username/password login failed, exception: "</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130057">"Parse signup failed, exception: "</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130058">"Parse password reset failed, exception: "</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130059">"Twitter login failed, exception: "</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13005a">"Updating user object after Twitter login failed, exception: "</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13005b">Logo</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13005c">"Passwords don't match, please try again"</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13005d">Name</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13005e">Please enter your email</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13005f">Please enter your name</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130060">Please enter your password</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130061">Please enter your username</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130062">Log in</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130063">Could not log in, please try again later</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130064">"The username and password you entered don't match"</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130065">Sign up</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130066">Password</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130067">Please wait…</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130068">Please re-enter your password</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130069">Could not sign up, please try again later</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13006a">Log in with Twitter</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13006b">Twitter login failed</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13006c">Update the app</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13006d">Username</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13006e">Username is already taken, please choose a different one</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13006f">Enable</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130070">"%1$s won't work unless you enable Google Play services."</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130071">Enable Google Play services</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130072">Install</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130073">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130074">Get Google Play services</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130075">Google Play services availability</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130076">Google Play services error</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130077">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130078">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130079">Update</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13007a">"%1$s won't run unless you update Google Play services."</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13007b">Update Google Play services</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13007c">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13007d">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13007e">Open on phone</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13007f">Sign in</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130080">Sign in with Google</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130081">Copy</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130082">default</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130083">Default</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130084">33400529460-qh0k5blmhc1931j2ebu4k1ll6o5a4ebo.apps.googleusercontent.com</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130085">Delete</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130086">Device ID</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130087">Dismiss</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130088">Done</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130089">"Don't show again"</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f13008a">Error: invalid</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130114">Select AM or PM</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130122">AM</string>
    <string name="APKTOOL_DUPLICATE_string_0x7f130126">PM</string>
</resources>