<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0b02e0" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/APKTOOL_DUPLICATE_id_0x7f0b0259" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/APKTOOL_DUPLICATE_string_0x7f13006d" android:singleLine="true" />
    <EditText android:id="@id/APKTOOL_DUPLICATE_id_0x7f0b0258" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07005d" android:hint="@string/APKTOOL_DUPLICATE_string_0x7f130066" android:singleLine="true" android:selectAllOnFocus="true" android:inputType="textPassword" android:fontFamily="sans-serif" />
    <LinearLayout android:id="@id/APKTOOL_DUPLICATE_id_0x7f0b02df" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07005b">
        <Button android:id="@id/APKTOOL_DUPLICATE_id_0x7f0b02e1" android:text="@string/APKTOOL_DUPLICATE_string_0x7f130062" android:layout_weight="0.5" style="@style/APKTOOL_DUPLICATE_style_0x7f140167" />
        <Button android:id="@id/APKTOOL_DUPLICATE_id_0x7f0b02e3" android:text="@string/APKTOOL_DUPLICATE_string_0x7f130065" android:layout_weight="0.5" android:layout_marginStart="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07005c" style="@style/APKTOOL_DUPLICATE_style_0x7f140167" />
    </LinearLayout>
    <Button android:id="@id/APKTOOL_DUPLICATE_id_0x7f0b02e2" android:layout_marginTop="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07005d" android:layout_marginBottom="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07005d" android:text="@string/APKTOOL_DUPLICATE_string_0x7f130042" style="@style/APKTOOL_DUPLICATE_style_0x7f140169" />
</LinearLayout>
