<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/APKTOOL_DUPLICATE_color_0x7f060054" android:gravity="center" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0b0256" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUPLICATE_string_0x7f130048" />
    <EditText android:id="@id/APKTOOL_DUPLICATE_id_0x7f0b0255" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070060" android:hint="@string/APKTOOL_DUPLICATE_string_0x7f130046" android:singleLine="true" />
    <Button android:id="@id/APKTOOL_DUPLICATE_id_0x7f0b0257" android:layout_marginTop="@dimen/APKTOOL_DUPLICATE_dimen_0x7f070060" android:text="@string/APKTOOL_DUPLICATE_string_0x7f13004a" style="@style/APKTOOL_DUPLICATE_style_0x7f140167" />
</LinearLayout>
