<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup android:orientation="vertical" android:id="@id/APKTOOL_DUPLICATE_id_0x7f0b026d" android:visibility="gone" android:layout_width="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07036f" android:layout_height="@dimen/APKTOOL_DUPLICATE_dimen_0x7f07036c" android:contentDescription="@string/APKTOOL_DUPLICATE_string_0x7f130114" app:APKTOOL_DUPLICATE_attr_0x7f0400e4="@id/APKTOOL_DUPLICATE_id_0x7f0b026b" app:APKTOOL_DUPLICATE_attr_0x7f0404fd="true" app:APKTOOL_DUPLICATE_attr_0x7f04052f="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.button.MaterialButton android:id="@id/APKTOOL_DUPLICATE_id_0x7f0b026b" android:layout_width="wrap_content" android:text="@string/APKTOOL_DUPLICATE_string_0x7f130122" android:insetTop="8.0dip" style="?APKTOOL_DUPLICATE_attr_0x7f0403b9" />
    <com.google.android.material.button.MaterialButton android:id="@id/APKTOOL_DUPLICATE_id_0x7f0b026c" android:layout_width="wrap_content" android:text="@string/APKTOOL_DUPLICATE_string_0x7f130126" android:insetBottom="8.0dip" style="?APKTOOL_DUPLICATE_attr_0x7f0403b9" />
</com.google.android.material.button.MaterialButtonToggleGroup>
